fix jumping resizer

--- a/front/src/styles/components/_editor.scss
+++ b/front/src/styles/components/_editor.scss
@@ -1,5 +1,4 @@
 .editor {
-    margin: 0 2.5rem;
     width: 100%;
     &__header {
         margin: 1rem 0;
