--- a/front/src/styles/components/_home.scss
+++ b/front/src/styles/components/_home.scss
@@ -1,5 +1,4 @@
 .home {
-    margin: 2rem;
     &__title {
         margin-bottom: 5.4rem;
     }
