--- a/front/src/styles/components/_sidebar.scss
+++ b/front/src/styles/components/_sidebar.scss
@@ -3,7 +3,6 @@
     @include bg-light-primary;
     @include stroke-blue-sharp;
     height: 100vh;
-    width: 300px;
     padding: 1rem;
     overflow: hidden;
 }
