--- a/front/src/styles/layout/_mainLayout.scss
+++ b/front/src/styles/layout/_mainLayout.scss
@@ -19,6 +19,11 @@ body {
     z-index: 1;
 }
 
+.right-sidebar {
+    margin: 0 2rem;
+    width: 100%;
+}
+
 .title {
     font-size: 5rem;
     font-weight: 500;
